--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=Ethernet
-version=1.1.2
-author=Various (see AUTHORS file for details)
-maintainer=Arduino <info@arduino.cc>
-sentence=Enables network connection (local and Internet) using the Arduino Ethernet Board or Shield.
-paragraph=With this library you can use the Arduino Ethernet (shield or board) to connect to Internet. The library provides both Client and server functionalities. The library permits you to connect to a local network also with DHCP and to resolve DNS.
+name=STM32Ethernet
+version=1.0.0
+author=Various
+maintainer=STMicroelectronics
+sentence=Enables network connection (local and Internet) using the STM32 Board.
+paragraph=With this library you can use the STM32 board to connect to Internet. The library provides both Client and server functionalities. The library permits you to connect to a local network also with DHCP and to resolve DNS. This library depends on the LwIP library.
 category=Communication
 url=http://www.arduino.cc/en/Reference/Ethernet
-architectures=*
+architectures=stm32
