--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=STM32Ethernet
-version=1.0.1
+name=STM32duino STM32Ethernet
+version=1.0.2
 author=Various
 maintainer=STMicroelectronics
 sentence=Enables network connection (local and Internet) using the STM32 Board.
 paragraph=With this library you can use the STM32 board to connect to Internet. The library provides both Client and server functionalities. The library permits you to connect to a local network also with DHCP and to resolve DNS. This library depends on the LwIP library.
 category=Communication
-url=http://www.arduino.cc/en/Reference/Ethernet
+url=https://github.com/stm32duino/STM32Ethernet
 architectures=stm32
