--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=STM32duino STM32Ethernet
-version=1.0.4
+version=1.0.5
 author=Various
 maintainer=STMicroelectronics
 sentence=Enables network connection (local and Internet) using the STM32 Board.
@@ -7,3 +7,4 @@ paragraph=With this library you can use the STM32 board to connect to Internet. 
 category=Communication
 url=https://github.com/stm32duino/STM32Ethernet
 architectures=stm32
+depends=STM32duino LwIP
