--- a/.github/workflows/Continuous-Integration.yml
+++ b/.github/workflows/Continuous-Integration.yml
@@ -31,14 +31,21 @@ jobs:
       run: |
         cat ${{ steps.Astyle.outputs.astyle-result }}
         exit 1
-  spell-check:
+  codespell:
+    name: Check for spelling errors
     runs-on: ubuntu-latest
-    name: Spell check
     steps:
-    - uses: actions/checkout@main
-    - uses: arduino/actions/libraries/spell-check@master
-      # with:
-      #   ignore-words-list: "./extras/codespell-ignore-words-list.txt"
+    - name: Checkout
+      uses: actions/checkout@main
+
+    # See: https://github.com/codespell-project/actions-codespell/blob/master/README.md
+    - name: Spell check
+      uses: codespell-project/actions-codespell@master
+      with:
+        check_filenames: true
+        check_hidden: true
+        # In the event of a false positive, add the word in all lower case to this file:
+        # ignore_words_file: ./extras/codespell-ignore-words-list.txt
   lib_build:
     runs-on: ubuntu-latest
     name: Library compilation
